[tool.poetry]
name = "mlstac"
version = "0.4.6"
description = "A machine learning model-sharing specification based on STAC MLM and Safetensors."
authors = ["Cesar Aybar <cesar.aybar@uv.es>"]
repository = "https://github.com/csaybar/isp-models"
documentation = "https://csaybar.github.io/isp-models/"
readme = "README.md"
packages = [
  {include = "mlstac"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pystac = ">=1.12.2"
fsspec = ">=2024.10.0"
safetensors = ">=0.5.2"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["mlstac"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W",  # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
]
ignore = [
    "E501",   # LineTooLong
    "E731",   # DoNotAssignLambda
    "TRY003", # Long exception messages (we want descriptive errors)
    "TRY300", # return in try block
    "TRY301", # raise in try block
    "S102",   # exec is required for dynamic module loading
    "C901",   # complex functions (legitimate complexity)
    "SIM108", # ternary operator suggestions
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"mlstac/__init__.py" = ["E402"]